update(completed challenge)

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -50,3 +50,23 @@ main{
   animation: fadeIn 0.2s linear forwards;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(color(text), 0.1);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(color(text), 0.4);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background:rgba(color(text), 0.5);
+}
+
